--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,12 +1,12 @@
 name: Print GitHub Context
 
 on:
-  push:
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
   pull_request:
-    branches:
-      - main
+#    branches:
+#      - main
 
 jobs:
   print-context:
@@ -16,7 +16,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Print GitHub context
+      - name: Configure Git Credentials
         run: |
-          echo "GitHub Context:"
-          echo "${{ toJson(github) }}"
+          export ARM_SKIP_PROVIDER_REGISTRATION=true
+          echo "Configuring global git credential helper to enable terraform to pull terraform modules"
+          git config --global credential.helper store
+          git config --global credential.https://github.com.username gitlab-ci-token
+          echo "https://${GH_TOKEN}@github.com" >>~/.git-credentials
+          git config --global credential.helper 'store --file ~/.git-credentials'
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
