--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,10 +1,10 @@
 name: Print GitHub Context
 
 on:
-#  push:
+  push:
 #    branches:
 #      - main
-  pull_request:
+#  pull_request:
 #    branches:
 #      - main
 
