--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -21,7 +21,8 @@ jobs:
           export ARM_SKIP_PROVIDER_REGISTRATION=true
           echo "Configuring global git credential helper to enable terraform to pull terraform modules"
           git config --global credential.helper store
-          echo "https://${GH_TOKEN}@github.com" >>~/.git-credentials
+          git config --global credential.https://github.com.username gitlab-ci-token
+          echo "https://gitlab-ci-token:${GH_TOKEN}@github.com" >>~/.git-credentials
           git config --global credential.helper 'store --file ~/.git-credentials'
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
