--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: Check branch
+        run: echo "Current branch is ${{ github.ref }}"
       - name: Run anything
         run: |
           pwd
