--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Check branch
         run: echo "Current branch is ${{ github.ref }}"
+        if: github.event_name != 'workflow_dispatch' && github.ref == 'refs/heads/main'
       - name: Run anything
         run: |
           pwd
