--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -23,5 +23,15 @@ jobs:
           pwd
           echo "My name is Hello"
         if: github.event.pull_request && github.event.pull_request.base.ref == 'main'
-
-
+      - name: Testing changes
+        run: |
+          # Fetch the list of changed files in the pull request
+          curl -s \
+            -H "Authorization: Bearer $GH_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files" > merge_request_changes.json
+            echo "Saved pull request changes to merge_request_changes.json"
+            cat merge_request_changes.json
+        if: github.event.pull_request && github.event.pull_request.base.ref == 'main'
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
