--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -20,8 +20,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Check branch
-        run: echo "Current branch is ${{ github.ref }}"
-        if: github.event_name != 'workflow_dispatch' && github.ref == 'refs/heads/main'
+        run: |
+          echo "Current branch is ${{ github.ref }}"
+          echo "Current branch is ${{ github.event.pull_request.number }}"
+        if: github.event.pull_request && github.event.pull_request.base.ref == 'main'     
       - name: Run anything 1
         run: |
           pwd
