--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -37,7 +37,7 @@ jobs:
           echo "Current branch is ${{ github.event.pull_request.number }}"
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        if: github.event.pull_request.base.ref == 'main'
+        if:  github.ref == 'refs/heads/main'
           
       - name: Run anything 1
         run: |
