--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -31,7 +31,7 @@ jobs:
           PULL_REQUEST_NUMBER=$(curl -s \
             -H "Authorization: token $GH_TOKEN" \
             -H "Accept: application/vnd.github.groot-preview+json" \
-            "https://api.github.com/repos/$REPO/commits/$COMMIT_SHA/pulls" | jq -r '.[0].number')
+            "https://api.github.com/repos/${{ github.repository }}/commits/$COMMIT_SHA/pulls" | jq -r '.[0].number')
           echo "PULL_REQUEST_NUMBER=$PULL_REQUEST_NUMBER" >> $GITHUB_ENV
           echo "$PULL_REQUEST_NUMBER"
           echo "Current branch is ${{ github.event.pull_request.number }}"
