--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -8,4 +8,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print Workflow ID
-        run: echo "Workflow ID: ${{ github.run_id }}"
+        run: echo  ${{ github.run_id }}
+    
