--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -24,5 +24,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print Workflow ID
-        run: echo  "$COMBINE"
+        run: echo  $COMBINE
     
