--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -5,7 +5,7 @@ on:
 env:
   BASE_DIR: "prod"
   SUB_DIR:  "code"
-  COMBINE: $BASE_DIR.$SUB_DIR
+
   
 jobs:
   print_id:
@@ -24,5 +24,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print Workflow ID
-        run: echo  $COMBINE
+        run: echo  $BASE_DIR.$SUB_DIR
     
