--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -5,6 +5,7 @@ on:
 env:
   BASE_DIR: "prod"
   SUB_DIR:  "code"
+  RUN_ID: "{{ github.run_id }}"
 
   
 jobs:
@@ -24,5 +25,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print Workflow ID
-        run: echo  $BASE_DIR.$SUB_DIR
+        run: echo  $BASE_DIR.$SUB_DIR.$RUN_ID
     
