--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -5,7 +5,8 @@ on:
 env:
   BASE_DIR: "prod"
   SUB_DIR:  "code"
-  RUN_ID: "{{ github.run_id }}"
+  RUN_ID: "${{ github.run_id }}"
+  RUN_ID1: ${{ github.run_id }}
 
   
 jobs:
@@ -25,5 +26,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print Workflow ID
-        run: echo  "$BASE_DIR.$SUB_DIR.${{ github.run_id }}"
+        run: echo  "$BASE_DIR.$SUB_DIR.$RUN_ID.$RUN_ID1
     
