--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -10,6 +10,23 @@ env:
 
   
 jobs:
+  set-version:
+    runs-on: ubuntu-latest
+    outputs:
+      full_version: ${{ steps.set-output.outputs.full_version }}
+    steps:
+      - name: Set FULL_VERSION
+        id: set-output
+        run: echo "full_version=1.0.${{ github.run_id }}" >> "$GITHUB_ENV"
+
+  use-version:
+    runs-on: ubuntu-latest
+    needs: set-version
+    steps:
+      - name: Print FULL_VERSION
+        run: echo "Using FULL_VERSION:${{ needs.set-version.outputs.full_version }}"
+
+
   print_id:
     runs-on: ubuntu-latest
     steps:
