--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -17,14 +17,14 @@ jobs:
     steps:
       - name: Set FULL_VERSION
         id: set-output
-        run: echo "full_version=1.0.${{ github.run_id }}" >> "$GITHUB_ENV"
+        run: echo "full_version=1.0.${{ github.run_id }}" >> "$GITHUB_OUTPUT"
 
   use-version:
     runs-on: ubuntu-latest
     needs: set-version
     steps:
       - name: Print FULL_VERSION
-        run: echo "${{ needs.set-version.outputs.full_version }}"
+        run: echo ${{ needs.set-version.outputs.full_version }}
 
 
   print_id:
